--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,63 @@
   color: #e74c3c;
 }
 
+/* Legend Container aligned to the right */
+.side-panel {
+  position: absolute;
+  top: 300px;
+  right: 900px;
+}
+
+/* Legend Box Styling */
+.legend-box {
+  border: 2px solid #ccc;
+  padding: 12px 16px;
+  border-radius: 10px;
+  background-color: hsl(0, 0%, 100%);
+  width: 120px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.legend-box h4 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
+}
+
+.legend-box {
+  text-align: center; 
+}
+
+.legend-box p {
+  margin: 6px 0;
+  font-size: 14px;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+}
+
+.legend-box .dot {
+  margin-right: 8px;
+}
+
 .dot.red { background-color: #f66; }
 .dot.yellow { background-color: #ffd966; }
 .dot.green { background-color: #90ee90; }
+
+.task-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: calc(50% - 200px); 
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.header {
+  background-color: #cce6ff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  display: inline-block;
+  margin: 0;
+}
