--- a/src/Optimized_Swim_Lanes.css
+++ b/src/Optimized_Swim_Lanes.css
@@ -1,7 +1,8 @@
 .App {
   font-family: Arial, sans-serif;
   padding: 20px;
-  background-color: #f5f5dc; /* Beige background for the entire app */
+  background: transparent;
+  /* Beige background for the entire app */
 }
 
 .header-container {
@@ -11,10 +12,20 @@
   margin-bottom: 20px;
 }
 
+body {
+  margin: 0;
+  background-image: url('../public/JINX.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: sans-serif;
+}
+
 .kanban-title {
   font-size: 2rem;
   font-weight: bold;
-  color: #333;
+  color: white;
 }
 
 .filter-group-container {
@@ -34,7 +45,11 @@
 .group-by-container label {
   font-size: 1rem;
   font-weight: bold;
-  color: #333;
+  color: white;
+}
+
+.group-header {
+  color: white;
 }
 
 .filter-container select,
@@ -58,7 +73,7 @@
   text-align: center;
   font-size: 1rem;
   font-weight: bold;
-  color: #666;
+  color: white;
 }
 
 .kanban-row {
@@ -69,7 +84,7 @@
 
 .kanban-column {
   flex: 1;
-  background-color: #f0e6d6;
+  background-color: rgba(255, 255, 255, 0.2);;
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -203,3 +218,5 @@
   right: 16px;
   z-index: 10;
 }
+
+
